# pydantic-compat

./: .github_changelog_generator  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/pydantic_compat/: __init__.py  _shared.py  _util.py  _v1.py  _v1_decorators.py  _v1_mixin.py  _v2.py  _v2_decorators.py  _v2_mixin.py  v1.py
src/pydantic_compat/_v1/: __init__.py  decorators.py  field.py  mixin.py
src/pydantic_compat/_v2/: __init__.py  decorators.py  field.py  mixin.py
tests/: test_base_model.py  test_decorators.py  test_fields.py  test_pydantic_compat.py
